2011-01-20  john ffitch  <jpff@codemist.co.uk>

	* Opcodes/mp3in.c (mp3len): New code

	* SConstruct: Add building of fareyseq/fareygen which got lost

2011-01-17  john ffitch  <jpff@codemist.co.uk>

	* H/version.h: VERSION 5.13

2011-01-13  john ffitch  <jpff@codemist.co.uk>

	* OOps/ugens2.c (ko1set): ensure that the increment cannot be zero

2011-01-10  john ffitch  <jpff@codemist.co.uk>

	* Engine/fgens.c (gen49): Use csound->FileOpen2 rather than open
	to get searching
	(gen49): buffer used was in wrong units (chars v shorts)

2010-12-28  john ffitch  <jpff@codemist.co.uk>

	* Engine/symbtab.c (add_token): remove message if Opcode/Function
	confusion

2010-12-18  john ffitch  <jpff@codemist.co.uk>

	* Opcodes/gab/tabmorph.c (atabmorphia): Fixed editing error that
	would have caused opcode to scribble over memory

2010-12-17  John ff  <jpff@cs.bath.ac.uk>

	* Opcodes/gab/vectorial.c: Lots of optimisations and corrections

2010-12-10  john ffitch  <jpff@codemist.co.uk>

	* Opcodes/gab/gab.c (isChanged_set): Initialise p->old_inargs

2010-12-05  john ffitch  <jpff@codemist.co.uk>

	* H/aops.h (struct INCH): Rewritten

	* OOps/aops.c (inch_opcode): Rewritten

	* Engine/entry1.c: Allow multiple args in inch

	* Engine/csound_orc.l (do_at): New code to support @ and @@ operators

2010-11-28  john ffitch  <jpff@codemist.co.uk>

	* Engine/symbtab.c: Added cent as function

2010-11-27  john ffitch  <jpff@codemist.co.uk>

	* OOps/ugens3.c (adsyn): check that ktogo is never zero

2010-11-16  John ff  <jpff@cs.bath.ac.uk>

	* Top/main.c (csoundCompile): and call macro inits

	* Engine/csound_orc.l: Add standard macro initialisation code to lexer

2010-11-12  John ff  <jpff@cs.bath.ac.uk>

	* Engine/csound_orc_semantics.c (handle_polymorphic_opcode):
	Calculating c before switch can lead to following a null
	pointer.  Moved calculation to where it is needed.

2010-11-05  John ff  <jpff@cs.bath.ac.uk>

	* OOps/ugens4.c (riset, rndset, rhset): Use Warning rather than Message