@@ -36,7 +36,7 @@
 #define CS_PACKAGE_VERSION  "5.13"
 #define CS_VERSION          (5)
 #define CS_SUBVER           (13)
-#define CS_PATCHLEVEL       (1)
+#define CS_PATCHLEVEL       (2)
 
 #define CS_APIVERSION       2   /* should be increased anytime a new version
                                    contains changes that an older host will
